--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -4,114 +4,75 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/blueAccent"
-    tools:context=".Signup">
-
+    android:padding="5dp"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    tools:context=".SignupFragment">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Sign Up"
-        android:layout_gravity="center"
-        android:layout_margin="10dp"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="30dp"
-        android:padding="20dp"
+        android:textSize="40sp"
         android:textStyle="bold"
-       />
+        android:textAllCaps="false"
+        android:textColor="#000000"
+        android:layout_marginTop="30dp"
+        android:gravity="center"/>
 
-    <LinearLayout
+    <EditText
+        android:id="@+id/nameInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_margin="10dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Name:"
-            android:textStyle="bold"/>
-
-        <EditText
-            android:id="@+id/nameEt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="type name"/>
-
-    </LinearLayout>
-
-    <LinearLayout
+        android:hint="Name"
+        android:textAllCaps="false"
+        android:textSize="20sp"
+        android:layout_marginTop="30dp"
+        android:gravity="center"/>
+    <EditText
+        android:id="@+id/emailInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_margin="10dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Email:"
-            android:textStyle="bold"/>
-
-        <EditText
-            android:id="@+id/emailEt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="type email"/>
-
-    </LinearLayout>
-
-    <LinearLayout
+        android:hint="Email"
+        android:textAllCaps="false"
+        android:textSize="20sp"
+        android:layout_marginTop="10dp"
+        android:gravity="center"/>
+    <EditText
+        android:id="@+id/phoneInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_margin="10dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Phone:" />
-
-        <EditText
-            android:id="@+id/phoneEt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="type Phone"
-            android:inputType="number"/>
-
-    </LinearLayout>
-
-    <LinearLayout
+        android:hint="Phone"
+        android:textAllCaps="false"
+        android:textSize="20sp"
+        android:layout_marginTop="10dp"
+        android:gravity="center"/>
+    <EditText
+        android:id="@+id/PassInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_margin="10dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Password:"
-            android:textStyle="bold"/>
-
-        <EditText
-            android:id="@+id/passwordEt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="type password" />
-
-    </LinearLayout>
-
+        android:hint="Password"
+        android:textAllCaps="false"
+        android:textSize="20sp"
+        android:layout_marginTop="10dp"
+        android:gravity="center"/>
 
     <Button
-        android:id="@+id/regbtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Register"
+        android:id="@+id/regBtn"
         android:layout_gravity="center"
-        android:layout_marginTop="10dp"
-        android:background="@color/colorPrimaryDark"
-        android:textStyle="bold"
-        android:textColor="@color/white"/>
-
+        android:layout_marginTop="20dp"
+        android:text="Register"
+        android:textColor="#ffffff"
+        android:textSize="24sp"
+        android:textAllCaps="false"
+        android:layout_width="168dp"
+        android:layout_height="43dp"
+        android:background="@drawable/signupshape"
+        android:shadowColor="#5F4496"
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:shadowRadius="0"
+        />
 
 
 </LinearLayout>
