--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -57,6 +60,7 @@
         android:layout_marginTop="10dp"
         android:gravity="center"/>
 
+
     <Button
         android:id="@+id/regBtn"
         android:layout_gravity="center"
@@ -74,5 +78,5 @@
         android:shadowRadius="0"
         />
 
-
 </LinearLayout>
+</ScrollView>
