--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -49,6 +49,7 @@
         android:textAllCaps="false"
         android:textSize="20sp"
         android:layout_marginTop="10dp"
+        android:inputType="number"
         android:gravity="center"/>
     <EditText
         android:id="@+id/PassInput"
