--- a/app/src/main/res/layout/fragment_event.xml
+++ b/app/src/main/res/layout/fragment_event.xml
@@ -6,16 +6,25 @@
     tools:context=".Event"
     android:background="@color/blueAccent">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyleView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:orientation="vertical"
+        android:layout_alignParentRight="true">
 
         <Button
             android:id="@+id/signoutbtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Signout"/>
+
+            android:text="Signout" />
+    </LinearLayout>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyleView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
@@ -30,21 +39,6 @@
         android:layout_marginBottom="12dp"
         android:src="@drawable/ic_add_black_24dp" />
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="232dp"
-        android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Create Event"
-            android:textSize="50dp"
-            android:textColor="@color/colorAccent"/>
-    </LinearLayout>
 
 </RelativeLayout>
