--- a/app/src/main/res/layout/fragment_event.xml
+++ b/app/src/main/res/layout/fragment_event.xml
@@ -4,27 +4,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Event"
-    android:background="@color/blueAccent">
+    android:background="@color/white">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:orientation="vertical"
-        android:layout_alignParentRight="true">
-
-        <Button
-            android:id="@+id/signoutbtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            android:text="Signout" />
-    </LinearLayout>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyleView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="0dp" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
