--- a/app/src/main/res/layout/rowitem.xml
+++ b/app/src/main/res/layout/rowitem.xml
@@ -8,11 +8,28 @@
     android:foreground="?attr/selectableItemBackground"
     android:clickable="true"
     >
-    <TextView
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="?android:listPreferredItemHeight">
+
+        <TextView
         android:id="@+id/row_event"
         android:layout_width="match_parent"
         android:layout_height="?android:listPreferredItemHeight"
         />
+        <TextView
+            android:id="@+id/menuTv"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:text="@string/item_dot"
+            android:gravity="center_vertical"
+            android:padding="10dp"
+
+            />
+
+    </RelativeLayout>
+
 
 
 </android.support.v7.widget.CardView>
