--- a/app/src/main/res/layout/info_show_dialog.xml
+++ b/app/src/main/res/layout/info_show_dialog.xml
@@ -3,53 +3,43 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/colorAccent">
+    android:padding="20dp"
+    android:background="@color/white">
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:layout_margin="10dp"
     android:layout_gravity="center">
     <TextView
-        android:id="@+id/event_nameTv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
+        android:text="Create New Expenditure"
+        android:textStyle="bold"
+        android:textSize="20dp"
         android:gravity="center"
-        android:textColor="@color/white"
-        android:text=""/>
-    <TextView
-        android:id="@+id/locTv"
+        android:layout_marginBottom="50dp"/>
+    <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:gravity="center"
-        android:textColor="@color/white"
-        android:text=""/>
-    <TextView
-        android:id="@+id/destTv"
+        android:hint="item name"
+        />
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:gravity="center"
-        android:textColor="@color/white"
-        android:text=""/>
-    <TextView
-        android:id="@+id/dateTv"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:gravity="center"
-        android:textColor="@color/white"
-        android:text=""/>
-    <TextView
-        android:id="@+id/budgetTv"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:gravity="center"
-        android:textColor="@color/white"
-        android:text=""/>
+        android:layout_weight="2"
+        android:orientation="horizontal">
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:inputType="number"
+            android:hint="cost"/>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:hint="quantity"/>
+    </LinearLayout>
 </LinearLayout>
 
 </LinearLayout>
